# collections_haskell

./: .gitignore  README.md  collections.cabal
src/main/Data/Collection/: BinarySearchTree.hs  BinaryTree.hs  BinomialHeap.hs  Heap.hs  LeftistHeap.hs  LeftistTree.hs  PriorityQueue.hs  Set.hs  Stack.hs
src/test/: Tests.hs
src/test/Data/Collection/: BinarySearchTreeTests.hs  BinaryTreeTests.hs  BinomialHeapTests.hs  HeapTests.hs  LeftistHeapTests.hs  LeftistTreeTests.hs  PriorityQueueTests.hs  SetTests.hs  StackTests.hs
